--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -24,8 +24,8 @@
                           android:enabled="false"
                           android:layout="@layout/viper_logo_row" />
 
-        <!-- ViperOS version -->
-        <Preference android:key="viper_version"
+        <!-- desiOS version -->
+        <Preference android:key="dosp_version"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/viper_version_title"
                 android:summary="@string/viper_version_default"
@@ -46,13 +46,13 @@
                     android:targetClass="@string/additional_system_update_menu" />
         </PreferenceScreen> -->
 
-        <!-- Viper OTA -->
-       <PreferenceScreen android:key="viper_ota"
+        <!-- dosp OTA -->
+       <PreferenceScreen android:key="dosp_ota"
             android:title="@string/system_update_settings_list_item_title"
             android:summary="@string/system_update_settings_list_item_summary">
              <intent android:action="android.intent.action.MAIN"
-                     android:targetPackage="com.viper.ota"
-                     android:targetClass="com.viper.ota.UpdatesActivity" />
+                     android:targetPackage="com.dosp.ota"
+                     android:targetClass="com.dosp.ota.UpdatesActivity" />
        </PreferenceScreen>
 	
         <!-- Device status - launches activity -->
