--- a/res/layout/dosp_logo_row.xml
+++ b/res/layout/dosp_logo_row.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2017 ViperOS
+<!-- Copyright (C) 2017 DOSP
         
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -19,9 +19,9 @@
     android:orientation="horizontal" >
 
         <ImageView
-            android:layout_width="625dp"
-            android:layout_height="100dp"
-            android:src="@drawable/viper_logo"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:src="@drawable/dosp_logo"
             android:scaleType="centerInside"
             android:adjustViewBounds="true" />
    
