--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -28,8 +28,7 @@
         <Preference android:key="dosp_version"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/viper_version_title"
-                android:summary="@string/viper_version_default"
-                android:icon="@drawable/ic_viper_about"/>
+                android:summary="@string/viper_version_default"/>
 
         <!-- System update settings - launches activity
         <PreferenceScreen android:key="system_update_settings"
