--- a/res/values/dosp_strings.xml
+++ b/res/values/dosp_strings.xml
@@ -14,7 +14,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- General strings -->
-    <string name="header_category_custom">Viper Additions</string>
+    <string name="header_category_custom">DOSP Additions</string>
     <string name="venom_title">Venom</string>
     <string name="venom_title_summary">ROM features &amp; customization</string>
     <string name="substratum_title">Substratum</string>
